--- a/src/App.scss
+++ b/src/App.scss
@@ -81,7 +81,7 @@ body {
         }
 
         .Menu-Button-Container {
-            position: absolute;
+            position: fixed;
             height: 100%;
             width: 40px;
             z-index: 2;
@@ -106,7 +106,7 @@ body {
 
 
             .Menu-Opcoes {
-                position: absolute;
+                position: fixed;
                 background-color: rgba(0, 0, 0, 0.558);
                 height: 100%;
                 width: 120px;
@@ -181,7 +181,7 @@ body {
                     background-position: center;
                     width: 90px;
                     max-width: 28%;
-                    height: 17vh;
+                    height: 25%;
 
                     border-radius: 20%;
                     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.423);
@@ -198,39 +198,70 @@ body {
 
                 width: 80%;
                 margin: auto;
-                
-                h1{
-                    color: #191e24;
+
+                h1 {
+                    color: #12161a;
                     font-size: 24px;
                 }
-                h2{
-                    color: #191e24;
+
+                h2 {
+                    color: #12161a;
                     font-size: 22px;
                 }
 
                 @mixin skillAndContainer {
-                   
+
                     text-align: center;
                     width: 100%;
                     height: 100%;
-                    border-left: 2px solid #191e24;
-                    border-right: 2px solid #191e24;
-                    border-radius: 20px 20px;
+                    border-radius: 10px 10px;
                 }
 
                 .Skills-Container {
-                    @include skillAndContainer()
+                    @include skillAndContainer();
+                    border-left: 2px solid #191e24;
                 }
 
                 .Contact-Container {
-                    @include skillAndContainer()
+                    @include skillAndContainer();
+                    border-right: 2px solid #191e24;
+                }
+            }
+
+            .Container-Projects {
+                width: 70%;
+                height: 40vh;
+                margin: auto;
+                border: 2px solid #191e24;
+                color: #12161a;
+                text-indent: 10px;
+
+
+                .All-Projects {
+                    width: 100%;
+                    height: 100%;
+
+                    @mixin ProjectsImg{
+                        margin: auto;
+                        display: block;
+                        background-position: center top;
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        width: 90%;
+                        height: 70%;
+
+                    }
+
+
+                    .Project1 {
+                        @include ProjectsImg();
+                        background-image: url("imagens/projeto1.png");
+                    }
                 }
             }
 
 
-
         }
-
 
     }
 }
