--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@ $Normal-font: "Gotham", Arial, Helvetica, sans-serif;
 body {
 
     background-color: $background-color-black;
+    overflow-x: hidden;
 
     .App {
 
@@ -194,46 +195,13 @@ body {
 
             }
 
-            .SkillsAndContact-Container {
-
-                width: 80%;
-                margin: auto;
-
-                h1 {
-                    color: #12161a;
-                    font-size: 24px;
-                }
-
-                h2 {
-                    color: #12161a;
-                    font-size: 22px;
-                }
-
-                @mixin skillAndContainer {
-
-                    text-align: center;
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 10px 10px;
-                }
-
-                .Skills-Container {
-                    @include skillAndContainer();
-                    border-left: 2px solid #191e24;
-                }
-
-                .Contact-Container {
-                    @include skillAndContainer();
-                    border-right: 2px solid #191e24;
-                }
-            }
-
             .Container-Projects {
                 width: 70%;
                 height: 40vh;
                 margin: auto;
                 border: 2px solid #191e24;
                 color: #12161a;
+                font-family: $Normal-font;
                 text-indent: 10px;
 
 
@@ -257,6 +225,42 @@ body {
                         @include ProjectsImg();
                         background-image: url("imagens/projeto1.png");
                     }
+                }
+            }
+
+            .SkillsAndContact-Container {
+
+                width: 80%;
+                margin: auto;
+
+                h1 {
+                    color: #12161a;
+                    font-size: 24px;
+                    font-family: $Normal-font;
+                }
+
+                h2 {
+                    color: #12161a;
+                    font-size: 22px;
+                    font-family: $Normal-font;
+                }
+
+                @mixin skillAndContainer {
+
+                    text-align: center;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px 10px;
+                }
+
+                .Skills-Container {
+                    @include skillAndContainer();
+                    border-left: 2px solid #191e24;
+                }
+
+                .Contact-Container {
+                    @include skillAndContainer();
+                    border-right: 2px solid #191e24;
                 }
             }
 
