--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ $Normal-font: "Gotham", Arial, Helvetica, sans-serif;
 body {
 
     background-color: $background-color-black;
-    overflow-x: hidden;
+
 
     .App {
 
@@ -71,7 +71,7 @@ body {
                         width: 20px;
                         height: 20px;
                         margin: 0px;
-                        top: -2%;
+                        top: -0.5px;
 
                         border-radius: 100%;
                     }
@@ -111,6 +111,7 @@ body {
                 background-color: rgba(0, 0, 0, 0.558);
                 height: 100%;
                 width: 120px;
+                z-index: 1;
 
                 .Menu-Buttons-Ul {
                     list-style: none;
@@ -120,24 +121,32 @@ body {
                     text-align: center;
 
 
+
                     li {
                         width: 100%;
                         height: 35px;
 
-
-
-                        button {
+                        a {
                             background: transparent;
                             width: 100%;
                             height: 100%;
                             color: white;
                             border: 0px;
+                            text-decoration: none;
                             font-family: $Normal-font;
+
+
+                            p {
+                                width: 100%;
+                                height: 100%;
+
+                            }
+
+                            p:hover {
+                                background-color: #191919;
+                            }
                         }
 
-                        button:hover {
-                            background-color: #191919;
-                        }
                     }
 
                 }
@@ -152,9 +161,10 @@ body {
                 border-left: 2px solid $darkred-color;
                 border-right: 2px solid $lightred-color;
                 border-radius: 0px 0px 25px 25px;
-                background-position: center center;
                 background-repeat: no-repeat;
                 background-size: cover;
+                background-position: 100% 60%;
+                background-attachment: local;
                 box-shadow: inset 1px 1px 10px 3px rgba(0, 0, 0, 0.227);
             }
 
@@ -174,15 +184,13 @@ body {
                 width: 100%;
                 height: 100%;
 
-
-
                 .My-Img {
                     background: black url("imagens/Phototer.jpg") no-repeat;
                     background-size: cover;
                     background-position: center;
-                    width: 90px;
-                    max-width: 28%;
-                    height: 25%;
+                    width: 65px;
+                    
+                    height: 100px;
 
                     border-radius: 20%;
                     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.423);
@@ -196,9 +204,9 @@ body {
             }
 
             .Container-Projects {
-                width: 70%;
-                height: 40vh;
-                margin: 50px auto 50px auto ;
+                width: 80%;
+                height: 100%;
+                margin: 50px auto 50px auto;
                 border: 2px solid #191e24;
                 box-shadow: inset 1px 1px 10px 1px rgba(0, 0, 0, 0.282);
                 color: #12161a;
@@ -211,17 +219,18 @@ body {
                     width: 100%;
                     height: 100%;
 
-                    @mixin ProjectsImg{
+                    @mixin ProjectsImg {
                         margin: auto;
                         display: block;
                         background-position: center top;
                         background-size: cover;
                         background-repeat: no-repeat;
-                        width: 80%;
-                        height: 70%;
+                        width: 85%;
+                        height: 50vh;
                         border-radius: 10px;
-                        text-decoration: none
-
+                        text-decoration: none;
+                        opacity: 90%;
+                        
                     }
 
 
@@ -230,13 +239,44 @@ body {
                         background-image: url("imagens/projeto1.png");
                         color: white;
                     }
+                    .Project2 {
+                        @include ProjectsImg();
+                        background-image: url("imagens/Projeto2.png");
+                        color: black;
+                    }
+
+
+
+
+                    .Buttons-Projects {
+
+                        width: 100%;
+                        margin: auto;
+                        text-align: center;
+
+                        button {
+
+                            background-color: transparent;
+                            border: 0px;
+                            margin: 10px 0px;
+
+                            span{
+                                width: 40px;
+                            }
+                            
+                            
+                        }
+                    }
+
                 }
             }
 
             .SkillsAndContact-Container {
 
                 width: 80%;
-                margin: 0px auto 50px auto;
+                margin: 0px auto 30px auto;
+                overflow-x: hidden;
+
 
                 h1 {
                     color: #12161a;
@@ -255,8 +295,9 @@ body {
                     text-align: center;
                     width: 100%;
                     height: 100%;
-                    border-radius: 10px 10px;
-                    
+                    border-radius: 5px 5px;
+
+
                 }
 
                 .Skills-Container {
@@ -271,6 +312,12 @@ body {
             }
 
 
+        }
+
+        footer {
+            width: 100%;
+            height: 60px;
+            background-color: #011420;
         }
 
     }
