--- a/src/App.scss
+++ b/src/App.scss
@@ -184,23 +184,65 @@ body {
                 width: 100%;
                 height: 100%;
 
-                .My-Img {
-                    background: black url("imagens/Phototer.jpg") no-repeat;
-                    background-size: cover;
-                    background-position: center;
-                    width: 65px;
-                    
-                    height: 100px;
 
-                    border-radius: 20%;
-                    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.423);
-                    opacity: 94%;
-                    margin: auto;
+                .My-Img {
+                    position: relative;
+                    width: 135px;
+                    max-width: 25%;
+                    margin: 10px 50% 0px 50%;
+
+                    transform: translate(0%);
+
+
+
+                    img {
+                        border: 2px solid #8C2656;
+                        border-radius: 10px;
+                        box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.423);
+                        opacity: 94%;
+
+                    }
+
                 }
 
 
 
 
+            }
+
+            @mixin texts(){
+                p {
+                    margin: 0;
+                }
+
+
+                .Welcome-Text {
+                    font-size: 3.5vh;
+                }
+
+                .Name-Text {
+                    font-size: 2.4vh;
+                }
+
+                .Developer-Text {
+                    font-size: 1.8vh;
+                    color: #8C2656;
+                }
+            }
+
+            .Container-Texts-LightTheme {
+
+                color: black;
+                text-align: center;
+                @include texts()
+                
+            }
+
+            .Container-Texts-DarkTheme {
+                color: white;
+                text-align: center;
+                @include texts()
+                    
             }
 
             .Container-Projects {
@@ -222,7 +264,7 @@ body {
                     @mixin ProjectsImg {
                         margin: auto;
                         display: block;
-                        background-position: center top;
+                        background-position: 50%;
                         background-size: cover;
                         background-repeat: no-repeat;
                         width: 85%;
@@ -230,7 +272,7 @@ body {
                         border-radius: 10px;
                         text-decoration: none;
                         opacity: 90%;
-                        
+
                     }
 
 
@@ -239,6 +281,7 @@ body {
                         background-image: url("imagens/projeto1.png");
                         color: white;
                     }
+
                     .Project2 {
                         @include ProjectsImg();
                         background-image: url("imagens/Projeto2.png");
@@ -260,11 +303,11 @@ body {
                             border: 0px;
                             margin: 10px 0px;
 
-                            span{
+                            span {
                                 width: 40px;
                             }
-                            
-                            
+
+
                         }
                     }
 
